--- a/BlogApp/Views/Auth/Login.cshtml
+++ b/BlogApp/Views/Auth/Login.cshtml
@@ -20,4 +20,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Login</button>
+    <a asp-action="Register" class="btn btn-link">Don't have an account? Register</a>
 </form>
