--- a/BlogApp/Views/Auth/Register.cshtml
+++ b/BlogApp/Views/Auth/Register.cshtml
@@ -38,4 +38,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Register</button>
+    <a asp-action="Login" class="btn btn-link">Already have an account? Login</a>
 </form>
