Implement the Post Create and Index

--- a/BlogApp/Views/UserHome/Index.cshtml
+++ b/BlogApp/Views/UserHome/Index.cshtml
@@ -1,2 +1,7 @@
-﻿<h2>Welcome User</h2>
-<p>This is the user dashboard.</p>
+﻿
+
+@{
+    ViewData["Title"] = "User Home";
+}
+
+<h2>Welcome User</h2>
