--- a/BlogApp/Views/Auth/Login.cshtml
+++ b/BlogApp/Views/Auth/Login.cshtml
@@ -19,6 +19,7 @@
         <input asp-for="Password" type="password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
+    <div asp-validation-summary="All" class="text-danger"></div>
 
     <button type="submit" class="btn btn-primary">Login</button>
     <a asp-action="Register" class="btn btn-link">Don't have an account? Register</a>
