--- a/BlogApp/Views/Auth/Register.cshtml
+++ b/BlogApp/Views/Auth/Register.cshtml
@@ -40,4 +40,5 @@
 
     <button type="submit" class="btn btn-primary">Register</button>
     <a asp-action="Login" class="btn btn-link">Already have an account? Login</a>
+    <div asp-validation-summary="All" class="text-danger"></div>
 </form>
