--- a/BlogApp/Views/AdminHome/Index.cshtml
+++ b/BlogApp/Views/AdminHome/Index.cshtml
@@ -1,2 +1,6 @@
-﻿<h2>Welcome Admin</h2>
+﻿@{
+    Layout = "~/Views/Shared/AdminLayout.cshtml";
+   
+}
+<h2>Welcome Admin</h2>
 <p>This is the admin dashboard.</p>
