Implement the text editor

--- a/BlogApp/Views/Post/Create.cshtml
+++ b/BlogApp/Views/Post/Create.cshtml
@@ -7,6 +7,8 @@
 
 <h2>Create Post</h2>
 
+
+
 <form asp-action="Create" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label asp-for="Title"></label>
@@ -15,10 +17,9 @@
     </div>
 
     <input type="hidden" asp-for="UserId" value="@Context.Session.GetInt32("UserId")" />
-
     <div class="form-group">
         <label asp-for="Content"></label>
-        <textarea asp-for="Content" class="form-control" rows="5"></textarea>
+        <textarea asp-for="Content" class="ck-editor__editable_inline form-control" id="Content" rows="200"></textarea>
         <span asp-validation-for="Content" class="text-danger"></span>
     </div>
 
@@ -34,3 +35,20 @@
 
     <div asp-validation-summary="All" class="text-danger"></div>
 </form>
+<style>
+    .ck-editor__editable_inline {
+        min-height: 300px;
+    }
+</style>
+<script src="https://cdn.ckeditor.com/ckeditor5/39.0.0/classic/ckeditor.js"></script>
+<script>
+    ClassicEditor
+        .create(document.querySelector('#Content'))
+       // .then(editor => {
+       //     editor.ui.view.editable.element.style.minHeight = '300px';
+      //  })
+        .catch(error => {
+            console.error(error);
+        });
+</script>
+
