--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -35,11 +35,19 @@
             @RenderBody()
         </main>
     </div>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <div class="text-end">
+            Welcome @User.Identity.Name |
+            <a asp-controller="Auth" asp-action="Logout">Logout</a>
+        </div>
+    }
+
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - BlogApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+        @*  <div class="container">
+             &copy; 2025 - BlogApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>*@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
