--- a/BlogApp/Views/Post/Details.cshtml
+++ b/BlogApp/Views/Post/Details.cshtml
@@ -36,7 +36,9 @@
 <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
 <!-- Trigger button -->
+@if (User.IsInRole("User")){
 <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#reportModal">Report</button>
+}
 <form asp-action="Like" asp-controller="Post" asp-route-postId="@Model.Id" method="post" style="display:inline;">
     <button type="submit" class="btn btn-outline-primary btn-sm">Like</button>
 
@@ -44,6 +46,8 @@
 <p><strong>Total Likes:</strong> @Model.Likes?.Count()</p>
 
 <!-- Modal -->
+@if (User.IsInRole("User"))
+{
 <div class="modal fade" id="reportModal" tabindex="-1">
     <div class="modal-dialog">
         <form asp-action="ReportPost" method="post">
@@ -58,9 +62,12 @@
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-danger">Submit Report</button>
                 </div>
+                    
             </div>
         </form>
     </div>
 </div>
+}
+
 
 
