Implement the Dashboard functionalities

--- a/BlogApp/Views/AdminHome/Index.cshtml
+++ b/BlogApp/Views/AdminHome/Index.cshtml
@@ -20,7 +20,7 @@
             <div class="card bg-primary shadow-sm">
                 <div class="card-body">
                     <h6 class="card-title">Total Posts</h6>
-                    <h3 class="card-text">120</h3>
+                    <h3 class="card-text">@Model.TotalPosts</h3>
                 </div>
             </div>
         </div>
@@ -50,39 +50,7 @@
         </div>
     </div>
 
-    <!-- Recent Activity Tables -->
-    <div class="row">
-        <div class="col-md-6">
-            <div class="card shadow-sm mb-4">
-                <div class="card-header bg-dark text-white">
-                    Recent Posts
-                </div>
-                <div class="card-body p-0">
-                    <table class="table table-striped mb-0">
-                        <thead class="table-light">
-                            <tr>
-                                <th>Title</th>
-                                <th>Date</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Introduction to .NET Core</td>
-                                <td>06 Mar 2025</td>
-                            </tr>
-                            <tr>
-                                <td>Best Practices in Web Security</td>
-                                <td>05 Mar 2025</td>
-                            </tr>
-                            <tr>
-                                <td>Advanced React Components</td>
-                                <td>04 Mar 2025</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+  
 
         <div class="col-md-6">
             <div class="card shadow-sm mb-4">
