--- a/BlogApp/Views/AdminHome/Index.cshtml
+++ b/BlogApp/Views/AdminHome/Index.cshtml
@@ -87,7 +87,7 @@
 
     <!-- Admin Actions -->
     <div class="text-center mt-4">
-        <a class="btn btn-outline-success btn-lg me-2" href="/Post/Approval"> Manage Approvals</a>
+        <a class="btn btn-outline-success btn-lg me-2" href="/Post/Index"> Manage Approvals</a>
         <a class="btn btn-outline-danger btn-lg" href="/Report/Manage"> View Reports</a>
     </div>
 </div>
