--- a/BlogApp/Views/Auth/AccessDenied.cshtml
+++ b/BlogApp/Views/Auth/AccessDenied.cshtml
@@ -5,5 +5,5 @@
 <div class="text-center mt-5">
     <h1 class="display-4 text-danger">Access Denied</h1>
     <p class="lead">You do not have permission to view this page.</p>
-    <a href="/" class="btn btn-primary mt-3">Go to Home</a>
+    <a href="/" class="btn btn-primary mt-3">Go to Login</a>
 </div>
