Implement in AdminHome who Manage Users

--- a/BlogApp/Views/Shared/AdminLayout.cshtml
+++ b/BlogApp/Views/Shared/AdminLayout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-white" asp-controller="Post" asp-action="Index">Manage Posts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-controller="User" asp-action="Index">Manage Users</a>
+                            <a class="nav-link text-white" asp-controller="AdminHome" asp-action="ManageUsers">Manage Users</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-danger" asp-controller="Auth" asp-action="Logout">Logout</a>
